# mla

./: .gitignore  CHANGELOG.md  COMPLETION.md  CONTRIBUTING.md  DIRECTORY_ANALYSIS.md  DIRECTORY_ANALYSIS_SUMMARY.txt  Dockerfile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  TEST_RESULTS.md  docker-compose.yml  package-lock.json  package.json  setup.sh  test_leak.c  verify.sh
.github/: copilot-instructions.md
backend/: .env.example  README.md  package.json  tsconfig.json
backend/src/: index.ts
backend/src/services/: claudeService.ts  memoryParser.ts  ollamaService.ts
cpp-analyzer/: CMakeLists.txt  README.md  package.json
cpp-analyzer/include/: memory_analyzer.h
cpp-analyzer/src/: analyzer.cpp  memory_parser.cpp
frontend/: Dockerfile  README.md  eslint.config.js  index.html  package.json  tailwind.config.cjs  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: Analyzer.tsx  Dashboard.tsx  Results.tsx
wiki/: Home.md
